[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://b2ndbkv4et6g1" path="res://ui/overlays/base_overlay/base_overlay.tscn" id="1_26nsx"]
[ext_resource type="Script" path="res://ui/overlays/online_death_overlay/online_death_overlay.gd" id="2_y5mr3"]

[node name="OnlineDeathOverlay" instance=ExtResource("1_26nsx")]
script = ExtResource("2_y5mr3")

[node name="RootSection" parent="PanelContainer/SectionsContainer" index="0"]
add_back_button = false

[node name="TitleLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection" index="0"]
layout_mode = 2
text = "TANK DESTROYED"
horizontal_alignment = 1

[node name="RespawnButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="1"]
unique_name_in_owner = true
layout_mode = 2
text = "RESPAWN"

[node name="ReturnButton" type="Button" parent="PanelContainer/SectionsContainer/RootSection" index="2"]
unique_name_in_owner = true
layout_mode = 2
text = "RETURN TO GARAGE"
